syntax = "proto3";

import "google/api/annotations.proto";
import "proto/operations_ecosys.proto";

option go_package = "/operations_ecosys";

package http_webapp;

service WebAppServices{
    // <><> Telegram WebApp - HTTP <><>
    rpc GetRosterAssignmentsForWebApp(HTTPAssignmentsGetRequest) returns (HTTPMessage) {
        option (google.api.http) = {
            get: "/http/rosters/{tele_user_id}/{startDate}/{endDate}/{twan}"
        };
    }

    rpc PostWReportFromWebApp(HTTPReportPostRequest) returns (HTTPMessage) {
        option (google.api.http) = {
            post: "/http/post_report"
            body: "*"
        };
    }

    rpc CheckRegistrationCode(HTTPMessage) returns (HTTPMessage) {
        option (google.api.http) = {
            post: "/http/post_report"
            body: "*"
        };
    }

    rpc PostRegistrationFormFromWebApp(HTTPRegistrationFormRequest) returns (HTTPMessage) {
        option (google.api.http) = {
            post: "/http/post_report"
            body: "*"
        };
    }
}

message HTTPMessage{
    //status==0 denotes no issues. status > 0 denotes some issue.
    int64 status = 1;
    string value = 2;
    repeated string valueArr = 3;
}

message HTTPAssignmentsGetRequest{
    string twan = 1;
    int64 tele_user_id = 2;
    string startDate = 3;
    string endDate = 4;
}

message HTTPReportPostRequest{
    string twan = 1;
    int64 tele_user_id = 2;
    string report_type = 3;
    string title = 4;
    string address = 5;
    string time = 6;
    string date = 7;
    string details = 8;
    bool isPoliceNotified = 9;
    bool isSCDFNotified = 10;
    bool isPropertyStolen = 11;
}

message HTTPRegistrationFormRequest{
    string code = 1;
    int64 tele_user_id = 2;
    string name = 3;
    string email = 4;
    string phoneNumber = 5;
    string loginString = 6;
    string hasedLoginString = 7;
    bool isPartTime = 8;
}